--- a/Domaci 24.02.2022/index.html
+++ b/Domaci 24.02.2022/index.html
@@ -17,33 +17,34 @@
         <h3 color="purple" class="bojaZaH7">Learn More</h3>
       </div>
     </div>
+
+    <div class="zajednicko2">
+      <div class="tekst">
+        <h2>The Catalyzer</h2>
+        <p>
+          Blue bottle crucifix vinyl post-ironic four dollar toast vegan
+          taxidermy. Gastropub indxgo juice poutine.
+        </p>
+        <h3 color="purple" class="bojaZaH7">Learn More</h3>
+      </div>
+      <div class="slikadesno">
+        <img src="./makaze.png" height="173px" />
+      </div>
+    </div>
     <div>
-      <div class="zajednicko2">
-                <div class="tekst">
-          <h2>The Catalyzer</h2>
+      <div class="zajednicko1 top2">
+        <div class="slika">
+          <img src="./covek.png" height="173px" />
+        </div>
+        <div class="tekst">
+          <h2>The 400 Blows</h2>
           <p>
             Blue bottle crucifix vinyl post-ironic four dollar toast vegan
             taxidermy. Gastropub indxgo juice poutine.
           </p>
           <h3 color="purple" class="bojaZaH7">Learn More</h3>
         </div>
-        <div class="slikadesno">
-            <img src="./makaze.png" height="173px"  />
-          </div>
       </div>
-      <div>
-        <div class="zajednicko1 top2">
-          <div class="slika">
-            <img src="./covek.png" height="173px" />
-          </div>
-          <div class="tekst">
-            <h2>The 400 Blows</h2>
-            <p>
-                Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.
-            </p>
-            <h3 color="purple" class="bojaZaH7">Learn More</h3>
-          </div>
-        </div>
     </div>
   </body>
 </html>
