--- a/Vezba 27.02.2022/index.html
+++ b/Vezba 27.02.2022/index.html
@@ -8,6 +8,8 @@
     />
   </head>
   <body>
+    <p class="naslov">Pricing</p>
+    <p style="margin-left: 673px; font-size:20px">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical.</p>
     <div class="container">
       <div class="card">
         <div class="header">
@@ -18,62 +20,60 @@
           <p>Vexillologist pitchfork</p>
           <p>Tumeric plaid portland</p>
           <p>Mixtape chillwave tumeric</p>
+          <p>Vexillologist pitchfork</p>
         </div>
         <div class="button" style="background: grey">Button</div>
-        <div class="dno">
+        <div class="footer">
           Literally you probably haven't heard of them jean shorts.
         </div>
-      </div>
+        </div>  
       <div class="card" style="border: blue 1px solid">
-        <div class="popular"><p>Popular</p></div>
-        <div class="header">
-          <p>PRO</p>
-          <h1>$38</h1>
-        </div>
-        <div class="main">
-          <p>Vexillologist pitchfork</p>
-          <p>Tumeric plaid portland</p>
-          <p>Hexagon neutra unicorn</p>
-          <p>Mixtape chillwave tumeric</p>
-        </div>
-        <div class="button">Button</div>
-        <div class="dno">
-          Literally you probably haven't heard of them jean shorts.
-        </div>
+      <div class="popular"><p>Popular</p></div>
+      <div class="header">
+        <p>PRO</p>
+        <h1>$38</h1>
       </div>
-      <div class="card">
-        <div class="header">
-          <p>BUSINESS</p>
-          <h1>$56</h1>
-        </div>
-        <div class="main">
-          <p>Vexillologist pitchfork</p>
-          <p>Tumeric plaid portland</p>
-          <p>Hexagon neutra unicorn</p>
-          <p>Vexillologist pitchfork</p>
-          <p>Mixtape chillwave tumeric</p>
-        </div>
-        <div class="button" style="background: grey">Button</div>
-        <div class="dno">
-          Literally you probably haven't heard of them jean shorts.
-        </div>
+      <div class="main">
+        <p>Vexillologist pitchfork</p>
+        <p>Tumeric plaid portland</p>
+        <p>Hexagon neutra unicorn</p>
+        <p>Mixtape chillwave tumeric</p>
       </div>
-      <div class="card">
-        <div class="header">
-          <p>SPECIAL</p>
-          <h1>$72</h1>
-        </div>
-        <div class="main">
-          <p>Vexillologist pitchfork</p>
-          <p>Tumeric plaid portland</p>
-          <p>Hexagon neutra unicorn</p>
-          <p>Vexillologist pitchfork</p>
-          <p>Mixtape chillwave tumeric</p>
-        </div>
-        <div class="button" style="background: grey">Button</div>
-        <div class="dno">
-          Literally you probably haven't heard of them jean shorts.
-        </div>
+      <div class="button">Button</div>
+      <div class="footer">
+        Literally you probably haven't heard of them jean shorts.
+      </div>
+    </div>
+    <div class="card">
+      <div class="header">
+        <p>BUSINESS</p>
+        <h1>$56</h1>
+      </div>
+      <div class="main">
+        <p>Vexillologist pitchfork</p>
+        <p>Tumeric plaid portland</p>
+        <p>Hexagon neutra unicorn</p>
+        <p>Vexillologist pitchfork</p>
+      </div>
+      <div class="button" style="background: grey">Button</div>
+      <div class="footer">
+        Literally you probably haven't heard of them jean shorts.
+      </div>
+    </div>
+    <div class="card">
+      <div class="header">
+        <p>SPECIAL</p>
+        <h1>$72</h1>
+      </div>
+      <div class="main">
+        <p>Vexillologist pitchfork</p>
+        <p>Tumeric plaid portland</p>
+        <p>Hexagon neutra unicorn</p>
+        <p>Vexillologist pitchfork</p>
+      </div>
+      <div class="button" style="background: grey">Button</div>
+      <div class="footer">
+        Literally you probably haven't heard of them jean shorts.
       </div>
     </div>
   </body>
