--- a/marketing/index.html
+++ b/marketing/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css" />
     <title>Marketing</title>
     <body>
@@ -92,7 +93,7 @@
         </div>
       </div>
     </div>
-        <h1 class="represent">What We Offer</h1>
+        <h1 class="represent">Who We Are</h1>
 
         <div class="representing">
 
@@ -124,6 +125,29 @@
         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p></div>
         <div class="representingfooter">Contact</div>  
         </div>
+    </div>
+    <h1 class="representcontact">Contact Us</h1>
+    <div class="contact-box">
+<form>
+<input type="text" class="input-field" placeholder="Name">
+<input type="text" class="input-field" placeholder="Email">
+<input type="text" class="input-field" placeholder="Subject">
+<input type="text" class="input-field" placeholder="Message">
+<button type="button" class="btn">Send</button>
+</form>
+    </div>
+    <div class="footer">
+<h3>Footer</h3>
+<button type="button" class="btnfooter">To the top</button>
+<div class="sclmedia">
+  <i class="fa-brands fa-facebook"></i>
+  <i class="fa-brands fa-instagram"></i>
+  <i class="fa-brands fa-snapchat"></i>
+  <i class="fa-brands fa-pinterest-p"></i>
+  <i class="fa-brands fa-twitter"></i>
+  <i class="fa-brands fa-linkedin-in"></i>
+</div>
+<p>Powered by <a href="https://centarnit.com/">Centar NiT</a></p>
     </div>
     </body>
   </head>
